--- a/src/main/resources/templates/post/list.html
+++ b/src/main/resources/templates/post/list.html
@@ -5,7 +5,21 @@
 </head>
 <body>
 <main layout:fragment="content">
-
+    <form action="/post/list">
+        <select name="filter">
+            <option value="post_title">제목</option>
+            <option value="post_content">내용</option>
+        </select>
+        <input type="text" name="description">
+        <input type="submit" value="검색">
+        <table border="1">
+            <tr th:each="post : ${posts}">
+                <td th:text="${post.post_id}">default value</td>
+                <td><a th:href="'/post/'+${post.post_id}" th:text="${post.post_title}"></a></td>
+                <td th:text="${post.post_content}">default value</td>
+            </tr>
+        </table>
+    </form>
 
 </main>
 </body>
