--- a/src/main/resources/templates/post/list.html
+++ b/src/main/resources/templates/post/list.html
@@ -19,6 +19,7 @@
                 <td th:text="${post.post_content}">default value</td>
             </tr>
         </table>
+        <button type="button" onclick="location.href='/post/register'">글쓰기</button>
     </form>
 
 </main>
