--- a/src/main/resources/static/css/user/login.css
+++ b/src/main/resources/static/css/user/login.css
@@ -7,44 +7,30 @@
 body, html {
     width: 100%;
     height: 100%;
-}
-
-.loginContainer{
-    width: 100%;
-    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 10%;
 }
 
 .logo {
-    flex: 4;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.loginContent {
-    flex: 6;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.img{
+.img {
     width: 400px;
     height: 400px;
     object-fit: contain;
     background: yellow;
 }
 
-.loginContent {
-    width: 100%;
-    height: 100%;
+.loginContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 10px;
 }
 
@@ -76,8 +62,8 @@ body, html {
     font-size: 12px;
 }
 
-.loginButton,
-.signUpButton {
+.loginBtn,
+.signUpBtn {
     width: 200px;
     height: 40px;
 }
