--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -2,50 +2,118 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <link rel="stylesheet" href="/css/user/login.css">
+    <title>로그인 페이지</title>
 </head>
 <body>
-    <div class="loginContainer">
-        <div class="logo">
-            <div class="img">
-            </div>
-        </div>
-        <div class="loginContent">
-            <div class="loginTitle">
-                <h1>로그인</h1>
-            </div>
-            <div >
-                <form class="loginForm">
-                    <div class="id">
-                        <label>아이디</label>
-                        <input type="text">
-                    </div>
-                    <div class="pw">
-                        <label>비밀번호</label>
-                        <input>
-                    </div>
-                    <div class="loginOption">
-                        <div>
-                            <label>
-                                <input type="checkbox" checked>
-                                자동로그인
-                            </label>
-                        </div>
-                        <div>
-                            <label>
-                                <input type="checkbox" checked>
-                                아이디저장
-                            </label>
-                        </div>
-                    </div>
-                    <button class="loginButton">로그인</button>
-                    <button class="signUpButton">회원가입</button>
-                </form>
-            </div>
-            <div class="signUpFind">
-                <a href="#">아이디찾기 </a>
-                <a href="#"> 비밀번호찾기</a>
-            </div>
+    <div class="logo">
+        <div class="img">
         </div>
     </div>
+    <div class="loginContainer">
+        <div class="loginTitle">
+            <h1>로그인</h1>
+        </div>
+        <div >
+            <form class="loginForm" action="/user/loginProcess" method="post">
+                <div class="id">
+                    <label>아이디</label>
+                    <input type="text" name="username" id="username">
+                </div>
+                <div class="pw">
+                    <label>비밀번호</label>
+                    <input  type="password" name="password" id="userPw">
+                </div>
+                <div class="loginOption">
+                    <div>
+                        <label>
+                            <input type="checkbox" name="rememberMe" id="rememberMe" checked>
+                            자동로그인
+                        </label>
+                    </div>
+                    <div>
+                        <label>
+                            <input type="checkbox"  name="rememberId" id="rememberId" checked>
+                            아이디저장
+                        </label>
+                    </div>
+                </div>
+                <button type="submit" class="loginBtn">로그인</button>
+                <button type="button" class="signUpBtn">회원가입</button>
+            </form>
+        </div>
+        <div class="signUpFind">
+            <a href="#">아이디찾기 </a>
+            <a href="#">비밀번호찾기</a>
+        </div>
+    </div>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script th:inline="javascript">
+    var flashMessage = [[${message}]];
+    if (flashMessage) {
+        alert(flashMessage);
+    }
+</script>
+<script>
+    document.querySelector(".loginBtn").addEventListener("click", (e) => {
+        e.preventDefault();
+
+        // 사용자가 입력한 아이디와 비밀번호 가져오기
+        const username = document.querySelector('input[name="username"]').value;
+        const password = document.querySelector('input[name="password"]').value;
+        const rememberMe = document.querySelector('input[name="rememberMe"]').checked ? 'true' : 'false';
+        const rememberId = document.querySelector('input[name="rememberId"]').checked ? 'true' : 'false';
+
+
+        const data = {username: username, password: password, rememberMe: rememberMe, rememberId: rememberId};
+
+        axios.post("/user/loginProcess", data)
+            .then(res => {
+                window.location.href = "/";
+            })
+            .catch(error => {
+                let redirectUrl = window.location.href;
+
+                if (error.response) {
+                    if (error.response.status === 403) {
+                        if (error.response.data === "LOGIN_LOCKED") {
+                            alert("로그인 5회 실패로 계정이 비활성화 되었습니다.\n비밀번호찾기에서 임시비밀번호를 발급하세요.");
+                        }
+                    } else if (error.response.status === 401) {
+                        alert("아이디 또는 비밀번호를 확인하세요.");
+                    } else {
+                        alert("알 수 없는 오류가 발생했습니다. 다시 시도해 주세요.");
+                    }
+                } else {
+                    alert("서버와의 연결에 문제가 발생했습니다.");
+                }
+
+                window.location.href = redirectUrl;
+            });
+    }, false);
+
+    // 쿠키에서 특정 이름의 값을 가져오는 함수
+    function getCookieValue(cookieName) {
+        var name = cookieName + "=";
+        var decodedCookie = decodeURIComponent(document.cookie);
+        var cookieArray = decodedCookie.split(';');
+        for (var i = 0; i < cookieArray.length; i++) {
+            var cookie = cookieArray[i].trim();
+            if (cookie.indexOf(name) === 0) {
+                return cookie.substring(name.length, cookie.length);
+            }
+        }
+        return "";
+    }
+
+    // 페이지 로드 시 실행할 함수
+    window.onload = function () {
+        document.getElementById("username").value = getCookieValue("rememberId"); // 아이디 입력 창에 값 설정
+    };
+
+    document.querySelector(".signUpBtn").addEventListener("click", (e) => {
+        e.preventDefault();
+        location.href = '/user/sign-up';
+    });
+</script>
 </body>
 </html>
