--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -14,14 +14,14 @@
             <h1>로그인</h1>
         </div>
         <div >
-            <form class="loginForm" action="/user/loginProcess" method="post">
+            <form class="loginForm">
                 <div class="id">
                     <label>아이디</label>
                     <input type="text" name="username" id="username">
                 </div>
                 <div class="pw">
                     <label>비밀번호</label>
-                    <input  type="password" name="password" id="userPw">
+                    <input type="password" name="password" id="userPw">
                 </div>
                 <div class="loginOption">
                     <div>
@@ -32,7 +32,7 @@
                     </div>
                     <div>
                         <label>
-                            <input type="checkbox"  name="rememberId" id="rememberId" checked>
+                            <input type="checkbox" name="rememberId" id="rememberId" checked>
                             아이디저장
                         </label>
                     </div>
@@ -66,7 +66,7 @@
 
         const data = {username: username, password: password, rememberMe: rememberMe, rememberId: rememberId};
 
-        axios.post("/user/loginProcess", data)
+        axios.post("/user/loginProcess", null, {params: data})
             .then(res => {
                 window.location.href = "/";
             })
