Design 헤더 회원아이콘 드롭 다운 메뉴 추가

--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -32,10 +32,26 @@ header {
     width: 50px;
     height 50px;
     margin-right: 20px;
+    position: relative;
+    display: inline-block;
 }
 
 .loginIcon i {
     font-size: 50px;
+    cursor: pointer;
+}
+
+.dropdown-menu {
+    min-width: 150px;
+    text-align: center;
+}
+
+.dropdown-toggle::after {
+    display: none;
+}
+
+.dropdown-item:hover {
+    background-color: #f1f1f1;
 }
 
 main {
