--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -13,12 +13,14 @@
 <header>
     <div class="headerContainer">
         <div class="homeLogo">
-
         </div>
         <div class="loginIcon">
-            <i class="bi bi-person"></i>
-<!--            로그인 상태일때-->
-<!--            <i class="bi bi-person-fill"></i>-->
+            <i class="bi bi-person dropdown-toggle" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false"></i>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <li><a class="dropdown-item" href="#">회원 정보</a></li>
+                <li><a class="dropdown-item" href="#">회원 활동 정보</a></li>
+                <li><a class="dropdown-item" href="javascript:void(0);" onclick="logout()">로그아웃</a></li>
+            </ul>
         </div>
     </div>
 </header>
@@ -43,5 +45,14 @@
 
 <!-- bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    function logout() {
+        const form = document.createElement('form');
+        form.method = 'POST';
+        form.action = '/logout';
+        document.body.appendChild(form);
+        form.submit();
+    }
+</script>
 </body>
 </html>
