--- a/src/main/resources/templates/post/detail.html
+++ b/src/main/resources/templates/post/detail.html
@@ -34,7 +34,7 @@
 
             </td>
             <td>
-                <button type="button" onclick="location.href='/post/list'">목록</button>
+                <a th:href="'/post/list/'+${post.boardId}">목록</a>
             </td>
         </tr>
     </table>
