--- a/src/main/resources/templates/post/register.html
+++ b/src/main/resources/templates/post/register.html
@@ -13,7 +13,7 @@
         </div>
         <div>
             <label for="boardId">BoardID:</label>
-            <input type="password" id="boardId" th:field="*{boardId}" required/>
+            <input type="text" id="boardId" th:field="*{boardId}" required/>
         </div>
         <div>
             <label for="postTitle">Title:</label>
