--- a/src/main/resources/templates/board/edit.html
+++ b/src/main/resources/templates/board/edit.html
@@ -2,14 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout}">
 <head>
-    <title>예시 페이지</title>
+    <title>Board Edit</title>
 </head>
 <body>
 <main layout:fragment="content">
     <form th:action="@{/board/{boardId}(boardId=${boardId})}" th:method="patch">
         <table border="1">
             <tr>
-<!--                <td th:text="|No.${boardId}|">default value</td>-->
                 <td>게시판명 : <input type="text" name="boardTitle" th:value="${board.boardTitle}"></td>
             </tr>
             <tr>
