--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -2,20 +2,16 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout}">
 <head>
-    <title>예시 페이지</title>
+    <title>home</title>
 </head>
 <body>
 <main layout:fragment="content">
     <table border="1">
-        <tr th:each="b : ${board}">
-            <td><a th:href="'/post/list/'+${b.board_id}" th:text="${b.board_title}"></a></td>
+        <tr th:each="board : ${boards}">
+            <td><a th:href="'/post/list/'+${board.boardId}" th:text="${board.boardTitle}"></a></td>
         </tr>
     </table>
     <button type="button" onclick="location.href='/board/register'">게시판 등록</button>
-<!--    <form th:action="@{/board/{boardId}(boardId=${board.boardId})}" th:method="delete">-->
-<!--        <button type="submit" class="button">삭제</button>-->
-<!--    </form>-->
-
 </main>
 </body>
 </html>
