--- a/src/main/resources/templates/board/register.html
+++ b/src/main/resources/templates/board/register.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout}">
 <head>
-  <title>예시 페이지</title>
+  <title>Board Register</title>
 </head>
 <body>
 <main layout:fragment="content">
