--- a/src/main/resources/templates/post/detail.html
+++ b/src/main/resources/templates/post/detail.html
@@ -8,7 +8,7 @@
 <main layout:fragment="content">
     <table border="1">
         <tr>
-            <td th:text="|No.${post.postId}|">default value</td>
+<!--            <td th:text="|작성자${post.user.userName}|">default value</td>-->
             <td>제목 :</td>
             <td th:text="${post.postTitle}">default value</td>
             <td th:text="|작성일시 : ${post.regDate}|">default value</td>
@@ -17,12 +17,7 @@
         <tr>
             <td th:text="${post.postContent}">default value</td>
         </tr>
-        <!--
-        <form th:action="@{/post/{postId}(postId=${post.postId})}" method="post">
-            <input type="hidden" name="_method" value="delete" />
-            <button type="submit" class="button">Delete</button>
-        </form>
-        -->
+
         <tr>
             <td>
                 <form th:action="@{/post/{postId}(postId=${post.postId})}" th:method="delete">
