Fix 오류 수정 중

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -5,47 +5,39 @@
     <title>로그인 페이지</title>
 </head>
 <body>
-    <div class="logo">
-        <div class="img">
-        </div>
+<div class="logo">
+    <div class="img">
     </div>
-    <div class="loginContainer">
-        <div class="loginTitle">
-            <h1>로그인</h1>
-        </div>
-        <div >
-            <form class="loginForm">
-                <div class="id">
-                    <label>아이디</label>
-                    <input type="text" name="username" id="username">
-                </div>
-                <div class="pw">
-                    <label>비밀번호</label>
-                    <input type="password" name="password" id="userPw">
-                </div>
-                <div class="loginOption">
-                    <div>
-                        <label>
-                            <input type="checkbox" name="rememberMe" id="rememberMe" checked>
-                            자동로그인
-                        </label>
-                    </div>
-                    <div>
-                        <label>
-                            <input type="checkbox" name="rememberId" id="rememberId" checked>
-                            아이디저장
-                        </label>
-                    </div>
-                </div>
-                <button type="submit" class="loginBtn">로그인</button>
-                <button type="button" class="signUpBtn">회원가입</button>
-            </form>
-        </div>
-        <div class="signUpFind">
-            <a href="#">아이디찾기 </a>
-            <a href="#">비밀번호찾기</a>
-        </div>
+</div>
+<div class="loginContainer">
+    <div class="loginTitle">
+        <h1>로그인</h1>
     </div>
+    <div >
+        <form class="loginForm">
+            <div class="id">
+                <label>아이디</label>
+                <input type="text" name="username" id="username" th:value="${rememberId}">
+            </div>
+            <div class="pw">
+                <label>비밀번호</label>
+                <input type="password" name="password" id="userPw">
+            </div>
+            <div class="loginOption">
+                <label>
+                    <input type="checkbox" name="rememberMe" id="rememberMe" checked>
+                    자동로그인
+                </label>
+            </div>
+            <button type="submit" class="loginBtn">로그인</button>
+            <button type="button" class="signUpBtn">회원가입</button>
+        </form>
+    </div>
+    <div class="signUpFind">
+        <a href="#">아이디찾기 </a>
+        <a href="#">비밀번호찾기</a>
+    </div>
+</div>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script th:inline="javascript">
     var flashMessage = [[${message}]];
@@ -61,14 +53,12 @@
         const username = document.querySelector('input[name="username"]').value;
         const password = document.querySelector('input[name="password"]').value;
         const rememberMe = document.querySelector('input[name="rememberMe"]').checked ? 'true' : 'false';
-        const rememberId = document.querySelector('input[name="rememberId"]').checked ? 'true' : 'false';
 
-
-        const data = {username: username, password: password, rememberMe: rememberMe, rememberId: rememberId};
+        const data = {username: username, password: password, rememberMe: rememberMe};
 
         axios.post("/user/loginProcess", null, {params: data})
             .then(res => {
-                window.location.href = "/";
+                window.location.href = "/board/list";
             })
             .catch(error => {
                 let redirectUrl = window.location.href;
@@ -90,25 +80,6 @@
                 window.location.href = redirectUrl;
             });
     }, false);
-
-    // 쿠키에서 특정 이름의 값을 가져오는 함수
-    function getCookieValue(cookieName) {
-        var name = cookieName + "=";
-        var decodedCookie = decodeURIComponent(document.cookie);
-        var cookieArray = decodedCookie.split(';');
-        for (var i = 0; i < cookieArray.length; i++) {
-            var cookie = cookieArray[i].trim();
-            if (cookie.indexOf(name) === 0) {
-                return cookie.substring(name.length, cookie.length);
-            }
-        }
-        return "";
-    }
-
-    // 페이지 로드 시 실행할 함수
-    window.onload = function () {
-        document.getElementById("username").value = getCookieValue("rememberId"); // 아이디 입력 창에 값 설정
-    };
 
     document.querySelector(".signUpBtn").addEventListener("click", (e) => {
         e.preventDefault();
