--- a/src/main/resources/templates/post/detail.html
+++ b/src/main/resources/templates/post/detail.html
@@ -33,9 +33,9 @@
         </tr>
     </table>
     <div id="commentSection">
-        <!-- 댓글 목록 표시 영역 -->
+        <!-- 댓글 목록 -->
         <ul id="commentList">
-            <!-- 댓글은 AJAX로 로딩됩니다 -->
+            <!-- 댓글은 FETCH로 조회됩니다 -->
         </ul>
 
         <!-- 댓글 작성 폼 -->
@@ -46,7 +46,7 @@
     </div>
 
     <script th:inline="javascript">
-        // 댓글 목록 로딩
+        // 댓글 목록 조회
         function loadComments() {
             fetch('/api/comment/[[${post.postId}]]', {
                 method: 'GET'
@@ -56,7 +56,6 @@
                 const commentList = document.getElementById('commentList');
                 commentList.innerHTML = ''; // 기존 목록 초기화
                 data.forEach(comment => {
-                console.log(comment)
                     const listItem = document.createElement('li');
                     listItem.id = `comment-${comment.id}`;
                     listItem.innerHTML = `
