--- a/src/main/resources/templates/post/list.html
+++ b/src/main/resources/templates/post/list.html
@@ -25,10 +25,21 @@
         <a th:href="@{/post/register(boardId=${boardId})}">글쓰기</a>
         <a th:href="'/board/list'">게시판 목록</a>
         <a th:href="'/board/edit/'+${boardId}">게시판 수정</a>
+
+        <!-- 페이지 버튼 -->
+        <div>
+            <a th:href="@{/post/list/{boardId}(boardId=${boardId}, page=${page - 1}, pageSize=10)}" th:if="${page > 1}">이전</a>
+
+            <span>Page <span th:text="${page}">1</span></span>
+
+            <a th:href="@{/post/list/{boardId}(boardId=${boardId}, page=${page + 1}, pageSize=10)}">다음</a>
+        </div>
     </form>
     <form th:action="@{/board/{boardId}(boardId=${boardId})}" th:method="delete">
         <button type="submit" class="button">게시판 삭제</button>
     </form>
+
+
 </main>
 </body>
 </html>
