Feat 회원정보조회, 회원정보수정, 관리자정보조회 추가

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -20,6 +20,7 @@
             <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="/profile">회원정보</a></li>
                 <li><a class="dropdown-item" href="/activity">회원활동정보</a></li>
+                <li><a class="dropdown-item" href="/admin">관리자페이지</a></li>
             </ul>
         </div>
     </div>
