--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -17,7 +17,7 @@
         <form class="loginForm">
             <div class="id">
                 <label>아이디</label>
-                <input type="text" name="username" id="username" th:value="${rememberId}">
+                <input type="text" name="username" id="username">
             </div>
             <div class="pw">
                 <label>비밀번호</label>
@@ -34,7 +34,7 @@
         </form>
     </div>
     <div class="signUpFind">
-        <a href="#">아이디찾기 </a>
+        <a href="/user/find-id">아이디찾기 </a>
         <a href="#">비밀번호찾기</a>
     </div>
 </div>
