--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -30,7 +30,7 @@ header {
 
 .loginIcon{
     width: 50px;
-    height 50px;
+    height: 50px;
     margin-right: 20px;
     position: relative;
     display: inline-block;
