--- a/src/main/resources/templates/post/list.html
+++ b/src/main/resources/templates/post/list.html
@@ -13,7 +13,7 @@
         </select>
         <input type="text" name="description">
         <input type="submit" value="검색">
-        <input type="hidden" th:name="boardId" th:value="${boardId}"/>
+        <input type="hidden" th:name="board_id" th:value="${boardId}"/>
         <a th:href="'/post/list/' + ${boardId}">게시글 목록</a>
         <table border="1">
             <tr th:each="post : ${posts}">
