Fix : 코드 리뷰 수정 사항, Feat : 조회수 기능

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -8,7 +8,22 @@
 <main layout:fragment="content">
     <table border="1">
         <tr th:each="board : ${boards}">
-            <td><a th:href="'/post/list/'+${board.boardId}" th:text="${board.boardTitle}"></a></td>
+            <!-- 게시판 리스트 -->
+            <td>
+                <a th:href="'/post/list/'+${board.boardId}" th:text="${board.boardTitle}"></a>
+            </td>
+            <!-- 게시판 수정 -->
+            <td>
+                <form th:action="@{/board/edit/{boardId}(boardId=${board.boardId})}" method="get">
+                    <button type="submit" class="button">수정</button>
+                </form>
+            </td>
+            <!-- 게시판 삭제 -->
+            <td>
+                <form th:action="@{/board/{boardId}(boardId=${board.boardId})}" th:method="delete">
+                    <button type="submit" class="button">삭제</button>
+                </form>
+            </td>
         </tr>
     </table>
     <button type="button" onclick="location.href='/board/register'">게시판 등록</button>
