--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -17,10 +17,10 @@
         <div class="loginIcon">
             <i class="bi bi-person dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"></i>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/profile">회원정보</a></li>
-                <li><a class="dropdown-item" href="/activity">회원활동정보</a></li>
-                <li><a class="dropdown-item" href="/admin">관리자페이지</a></li>
-                <li><a class="dropdown-item" href="javascript:void(0);" onclick="logout()">로그아웃</a></li>
+                <li><a class="dropdown-item" th:href="@{'/profile'}">회원정보</a></li>
+                <li><a class="dropdown-item" th:href="@{'/activity'}">회원활동정보</a></li>
+                <li><a class="dropdown-item" th:href="@{'/admin'}">관리자페이지</a></li>
+                <li><button class="dropdown-item" id="logoutButton">로그아웃</button></li>
             </ul>
         </div>
     </div>
@@ -36,7 +36,7 @@
             <p>프로젝트 이름</p>
             <p>ⓒ프로젝트 팀 명</p>
             <p>이메일 : 팀 리더 이메일</p>
-            <p>repository : 깃허브주소</p>
+            <a th:href="@{'/notice'}">repository : 깃허브주소</a>
         </div>
         <div>
             <p>공지사항</p>
@@ -46,5 +46,18 @@
 
 <!-- bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    function logout() {
+        const form = document.createElement('form');
+        form.method = 'POST';
+        form.action = '/logout';
+        form.style.display = 'none';
+
+        document.body.appendChild(form);
+        form.submit();
+    }
+
+    document.getElementById('logoutButton').addEventListener('click', logout);
+</script>
 </body>
 </html>
