--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -34,8 +34,8 @@
         </form>
     </div>
     <div class="signUpFind">
-        <a href="/user/find-id">아이디찾기 </a>
-        <a href="#">비밀번호찾기</a>
+        <a th:href="@{'/user/find-id'}">아이디찾기 </a>
+        <a th:href="@{'/user/find-pw'}">비밀번호찾기</a>
     </div>
 </div>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -46,45 +46,37 @@
     }
 </script>
 <script>
-    document.querySelector(".loginBtn").addEventListener("click", (e) => {
+    async function login(e) {
         e.preventDefault();
 
-        // 사용자가 입력한 아이디와 비밀번호 가져오기
-        const username = document.querySelector('input[name="username"]').value;
-        const password = document.querySelector('input[name="password"]').value;
-        const rememberMe = document.querySelector('input[name="rememberMe"]').checked ? 'true' : 'false';
+        const username = document.getElementById('username').value;
+        const password = document.getElementById('userPw').value;
+        const rememberMe = document.getElementById('rememberMe').checked ? 'true' : 'false';
 
-        const data = {username: username, password: password, rememberMe: rememberMe};
+        const data = { username, password, rememberMe };
 
-        axios.post("/user/loginProcess", null, {params: data})
-            .then(res => {
-                window.location.href = "/board/list";
-            })
-            .catch(error => {
-                let redirectUrl = window.location.href;
+        try {
+            const response = await axios.post("/user/loginProcess", null, { params: data });
 
-                if (error.response) {
-                    if (error.response.status === 403) {
-                        if (error.response.data === "LOGIN_LOCKED") {
-                            alert("로그인 5회 실패로 계정이 비활성화 되었습니다.\n비밀번호찾기에서 임시비밀번호를 발급하세요.");
-                        }
-                    } else if (error.response.status === 401) {
-                        alert("아이디 또는 비밀번호를 확인하세요.");
-                    } else {
-                        alert("알 수 없는 오류가 발생했습니다. 다시 시도해 주세요.");
-                    }
+            window.location.href = "/board/list";
+        } catch (error) {
+            if (error.response) {
+                if (error.response.status === 403 && error.response.data === "LOGIN_LOCKED") {
+                    alert("로그인 5회 실패로 계정이 비활성화 되었습니다.\n비밀번호찾기에서 임시비밀번호를 발급하세요.");
+                } else if (error.response.status === 401) {
+                    alert("아이디 또는 비밀번호를 확인하세요.");
                 } else {
-                    alert("서버와의 연결에 문제가 발생했습니다.");
+                    alert("알 수 없는 오류가 발생했습니다. 다시 시도해 주세요.");
                 }
+            } else {
+                alert("서버와의 연결에 문제가 발생했습니다.");
+            }
+            console.error("로그인 에러 발생:", error.message);
+        }
+    }
 
-                window.location.href = redirectUrl;
-            });
-    }, false);
-
-    document.querySelector(".signUpBtn").addEventListener("click", (e) => {
-        e.preventDefault();
-        location.href = '/user/sign-up';
-    });
+    document.querySelector('.loginBtn').addEventListener('click', login);
+    document.querySelector('.signUpBtn').addEventListener('click', () => location.href = '/user/sign-up');
 </script>
 </body>
 </html>
