Feat 댓글 기능 구현

--- a/src/main/resources/templates/post/detail.html
+++ b/src/main/resources/templates/post/detail.html
@@ -80,7 +80,7 @@
                 headers: {
                     'Content-Type': 'application/json'
                 },
-                body: JSON.stringify({ commentContent: content, userId: userId, postId: postId})
+                body: JSON.stringify({ commentContent: content, postId: postId})
             })
             .then(response => response.json())
             .then(data => {
