--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -6,8 +6,7 @@
 </head>
 <body>
 <div class="logo">
-    <div class="img">
-    </div>
+    <img th:src="@{/img/logo.png}">
 </div>
 <div class="loginContainer">
     <div class="loginTitle">
