--- a/src/main/resources/templates/post/list.html
+++ b/src/main/resources/templates/post/list.html
@@ -7,6 +7,9 @@
 <body>
 <main layout:fragment="content">
     <form action="/post/list">
+        <!-- 정렬 -->
+        <a href="#" th:href="@{/post/list/{boardId}(boardId=${boardId}, orderBy='reg_date')}">등록일</a>
+        <a href="#" th:href="@{/post/list/{boardId}(boardId=${boardId}, orderBy='view_count')}">조회수</a>
         <select name="filter">
             <option value="post_title">제목</option>
             <option value="post_content">내용</option>
