--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: Noto Sans;
+    src: url('/fonts/NotoSansKR-VariableFont_wght.ttf');
+}
+
+body {
+    font-family: 'Noto Sans', sans-serif;
+}
+
 header, main, footer {
     max-width: 1280px;
     margin: auto;
@@ -42,6 +51,7 @@ header {
 
 .loginIcon i {
     font-size: 40px;
+    color: #667373;
     cursor: pointer;
 }
 
@@ -56,6 +66,10 @@ header {
 
 .dropdown-item:hover {
     background-color: #f1f1f1;
+}
+
+#logoutButton {
+    font-size: 14px;
 }
 
 main {
