--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <!-- bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
@@ -20,7 +21,7 @@
             <ul class="dropdown-menu">
                 <li><a class="dropdown-item" th:href="@{'/profile'}">회원정보</a></li>
                 <li><a class="dropdown-item" th:href="@{'/activity'}">회원활동정보</a></li>
-                <li><a class="dropdown-item" th:href="@{'/admin'}">관리자페이지</a></li>
+                <li sec:authorize="hasRole('ROLE_ADMIN')"><a class="dropdown-item" th:href="@{'/admin'}">관리자페이지</a></li>
                 <li><button class="dropdown-item" id="logoutButton">로그아웃</button></li>
             </ul>
         </div>
@@ -34,7 +35,7 @@
 <footer>
     <div class="footerContainer">
         <div class="project">
-            <p>ⓒ퇴근하고 뭐하지</p>
+            <p>ⓒ퇴근하고 뭐하지?</p>
             <p>Contact : star6910@naver.com</p>
             <a th:href="${'https://kdt-gitlab.elice.io/cloud_track/class_05/web_project1/team06/team06'}">repository : https://kdt-gitlab.elice.io</a>
         </div>
@@ -46,18 +47,6 @@
 
 <!-- bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-    function logout() {
-        const form = document.createElement('form');
-        form.method = 'POST';
-        form.action = '/logout';
-        form.style.display = 'none';
-
-        document.body.appendChild(form);
-        form.submit();
-    }
-
-    document.getElementById('logoutButton').addEventListener('click', logout);
-</script>
+<script th:src="@{/js/layout.js}"></script>
 </body>
 </html>
