Feat 팔로우 기능 구현중

--- a/src/main/resources/templates/post/edit.html
+++ b/src/main/resources/templates/post/edit.html
@@ -22,7 +22,9 @@
                     <button type="submit" class="button">확인</button>
                 </td>
                 <td>
-                    <a th:href="'/post/'+${post.postId}">취소</a>
+                    <button class="button">
+                        <a th:href="'/post/'+${post.postId}">취소</a>
+                    </button>
                 </td>
             </tr>
         </table>
