--- a/src/main/resources/templates/post/detail.html
+++ b/src/main/resources/templates/post/detail.html
@@ -17,6 +17,9 @@
                     <input type="hidden" name="_method" value="DELETE">
                     <button type="submit" class="button">즐겨찾기 삭제</button>
                 </form>
+                <form th:action="@{/api/following}" th:method="post">
+                    <button type="submit" class="button">팔로우</button>
+                </form>
             </td>
         </tr>
         <tr>
@@ -37,12 +40,16 @@
                 </form>
             </td>
             <td>
-                <a th:href="'/post/edit/'+${post.postId}">수정</a>
-
+                <button class="button">
+                    <a th:href="'/post/edit/'+${post.postId}">수정</a>
+                </button>
             </td>
             <td>
-                <a th:href="'/post/list/'+${post.boardId}">목록</a>
+                <button class="button">
+                    <a th:href="'/post/list/'+${post.boardId}">목록</a>
+                </button>
             </td>
+
         </tr>
     </table>
     <div id="commentSection">
